# chromium

./: .gitignore  SECURITY.md  TODO.md  args.gn  build.py  check_simd.py  clean.py  create_dmg.py  get_repo.py  reset_depot_tools.py  setup.py  trunk.py  version.py  win_args.gn
.circleci/: config.yml
arm/: README.md  win_ARM_args.gn
arm/android/: README.md  arm32_args.gn  arm64_args.gn  chromium_x64_release_args.gn  debug_args.gn  x64_args.gn  x86_args.gn
arm/raspi/: raspi_args.gn
docs/: ABOUT_GN_ARGS.md  ABOUT_RELEASES.md  BUILDING.md  BUILDING_MAC.md  BUILDING_WIN.md  BUILDING_WIN_CROSS.md  CMDLINE_FLAGS_LIST.md  FEATURES.md  PATCHES.md  README.md
infra/: DEV_CMDLINE_FLAGS.txt  README.md  THORIUM_DEV_BOOKMARKS.html  args.list  build_llvm.py  gn_args.list  win_args.list
infra/APPIMAGE/: README.md  README.pkg2appimage  Thorium.yml  appimage.py
infra/APPIMAGE/files/: thorium-shell
infra/Arch_Linux/: .SRCINFO  .gitignore  .nvchecker.toml  PKGBUILD
infra/DEBUG/: ABOUT_GN_ARGS.md  DEBUGGING.md  DEBUG_SHELL_README.md  README.md  Thorium_Debug_Shell.sh  build_debug.py  linux_x64_debug_args.gn  linux_x64_release_dcheck_args.gn  mac_arm64_debug_args.gn  mac_x64_debug_args.gn  win_x64_debug_args.gn  win_x64_release_dcheck_args.gn  win_x64_release_symbols_args.gn
infra/Flatpak/com.alex313031.thorium/: org.chromium.Chromium.yaml
infra/Flatpak/com.alex313031.thorium/build-aux/: bootstrap.sh  build.sh  install.sh
infra/Flatpak/com.alex313031.thorium/patches/chromium/: _sources.json
infra/portable/: README.linux  README.md  README.win  portable.py
infra/portable/desktop/: thorium-portable.desktop.in  thorium-shell.desktop.in
infra/portable/launchers/: linux-browser.sh  linux-shell.sh  windows-browser.cmd  windows-shell.cmd
other/: GPC.patch  README.md  abseil-bmi2-include-immintrin.patch  add-ac3-eac3-ffmpeg-decoders.patch  add-boss-key.patch  add-flag-for-auto-dark-mode.patch  add-flag-for-close-confirmation.patch  add-flag-for-custom-ntp.patch  add-flag-for-double-click-close-tab.patch  add-flag-for-encrypted-client-hello.patch  add-flag-for-hover-activate-tab.patch  add-flag-for-incognito-themes.patch  add-flag-for-open-bookmarks-in-new-tab.patch  add-flag-for-open-omnibox-url-in-new-tab.patch  add-flag-for-right-click-close-tab.patch  add-flag-for-system-linux-theme.patch  add-flag-for-tab-hover-cards.patch  add-flag-to-clear-data-on-exit.patch  add-flag-to-close-window-with-last-tab.patch  add-flag-to-hide-extensions-menu.patch  add-flag-to-hide-tab-close-buttons.patch  add-flag-to-keep-all-history.patch  add-flag-to-scroll-tabs.patch  add-hevc-ffmpeg-decoder-parser.patch  add-quick-extension-toggle-menu.patch  allow-insecure-downloads.patch  allow-webaudio-autoplay.patch  allow_manifest_v2_extensions.patch  always-enable-reload-menu.patch  android-disable-signin-without-account-manager.patch  android-extensions-support.patch  android-thorium-branding.patch  bookmark-default-prefs.patch  bookmark-dialog-default-folder.patch  change-libavcodec-header.patch  chrome-web-store-protection.patch  classic-bookmarks.patch  classic-omnibox.patch  content-gpu-vaapi-libva-config.patch  custom-tab-width.patch  (+118 more)
other/AVX2/: AVX2_args.gn  README.md  win_AVX2_args.gn
other/AVX512/: AVX512_args.gn  README.md  win_AVX512_args.gn
other/CrOS/: README.md  cros_args.gn
other/Mac/: mac_ARM_args.gn  mac_args.gn
other/SSE2/: README.md  angle-lockfree.patch  args_SSE2.gn  win32_SSE2_args.gn
other/SSE3/: README.md  args_SSE3.gn  win32_SSE3_args.gn  win64_SSE3_args.gn
other/SSE4.1/: README.md  args_SSE4.1.gn  win32_SSE4.1_args.gn  win64_SSE4.1_args.gn
other/SSE4.2/: README.md  args_SSE4.2.gn  win32_SSE4.2_args.gn  win64_SSE4.2_args.gn
other/thor_ver_linux/: wrapper-avx2  wrapper-avx512  wrapper-raspi  wrapper-sse2  wrapper-sse3  wrapper-sse4
other/ungoogled/core/inox-patchset/: 0001-fix-building-without-safebrowsing.patch
pak_src/: README.md
patch_scripts/grd_rebase/: README.md  merge_thorium_xtb.py  sync_grd_strings.py  update_config_from_patches.py
patch_scripts/grd_rebase/config/: feature_patch_message_ownership.csv  file_allowlist.csv  m150_xtb_additions.tsv  message_allowlist.csv
patch_scripts/series/: README.md  apply_series.py  refresh_series.py  series
src/chrome/app/theme/chromium/mac/AppIcon.icon/: icon.json
src/chrome/app/vector_icons/thorium/: science_thorium.icon
src/chrome/browser/: thorium_flag_choices.h  thorium_flag_entries.h
src/components/neterror/: README.md
src/ui/views/vector_icons/thorium/: arrow_drop_down_thorium.icon
src/ui/webui/resources/text/: AUTHORS.txt
