target_os = "win"
is_win_arm64 = true
target_cpu = "arm64"
v8_target_cpu = "arm64"
is_official_build = true
is_debug = false
enable_stripping = true
thin_lto_enable_cache = false
dcheck_always_on = false
exclude_unwind_tables = true
enable_iterator_debugging = false
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 0
optimize_webui = true
is_clang = true
treat_warnings_as_errors = false
win_enable_cfg_guards = true
use_lld = true
v8_symbol_level = 0
blink_symbol_level = 0
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
clang_use_chrome_plugins = true
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = false
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = true
enable_cdm_storage_id = true
enable_rlz = true
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_hangout_services_extension = false
rtc_use_h264 = true
rtc_use_h265 = true
rtc_build_examples = false
rtc_enable_avx2 = false
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
platform_has_optional_hevc_decode_support = true
platform_has_optional_hevc_encode_support = false
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_text_section_splitting = true
use_thin_lto = true
thin_lto_enable_optimizations = true
enable_rust = true
chrome_pgo_phase = 2
pgo_data_path = "C:\src\chromium\src\chrome\build\pgo_profiles\chrome-win-arm64-main-1780336787-195b54a8e2b5affc4308937ade3f5c3ca3397612-ebe81572e57797c4e51db7cf7740d51140e35622.profdata"
