target_os = "android"
target_cpu = "arm64"
v8_target_cpu = "arm64"
is_official_build = false
is_high_end_android = false
is_debug = true
is_java_debug = true
debuggable_apks = true
use_relative_vtables_abi = false
icu_use_data_file = true
android_channel = "stable"
disable_android_lint = false
enable_stripping = false
thin_lto_enable_cache = false
strip_debug_info = false
dcheck_always_on = true
exclude_unwind_tables = false
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_remoting = false
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 2
optimize_webui = false
treat_warnings_as_errors = false
system_webview_package_name = "com.thorium.webview"
trichrome_library_package = "org.thorium.trichromelibrary"
system_webview_shell_package_name = "org.thorium.webview_shell"
use_lld = true
v8_symbol_level = 2
use_v8_context_snapshot = true
v8_use_external_startup_data = true
blink_symbol_level = 2
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
clang_use_chrome_plugins = true
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = false
enable_widevine = true
bundle_widevine_cdm = false
enable_cdm_host_verification = false
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_hangout_services_extension = false
rtc_use_h264 = false
rtc_build_examples = false
rtc_enable_avx2 = false
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
platform_has_optional_hevc_decode_support = true
platform_has_optional_hevc_encode_support = false
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_thin_lto = false
thin_lto_enable_optimizations = false
enable_rust = true
chrome_pgo_phase = 0
