thorium_x86_profile = "avx"
target_os = "linux"
target_cpu = "x64"
enable_linux_installer = false
enable_distro_version_check = false
is_official_build = false
is_debug = true
enable_stripping = false
thin_lto_enable_cache = false
dcheck_always_on = true
exclude_unwind_tables = false
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 2
use_debug_fission = true
optimize_webui = false
is_clang = true
treat_warnings_as_errors = false
use_lld = true
use_icf = false
is_cfi = false
v8_symbol_level = 2
v8_enable_fast_torque = true
v8_enable_wasm_simd256_revec = true
use_v8_context_snapshot = true
blink_symbol_level = 2
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
clang_use_chrome_plugins = false
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = false
use_vaapi = true
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = false
enable_cdm_host_verification = false
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_hangout_services_extension = false
rtc_use_h264 = true
rtc_use_h265 = true
rtc_build_examples = true
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
platform_has_optional_hevc_decode_support = true
platform_has_optional_hevc_encode_support = false
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_text_section_splitting = true
use_thin_lto = false
thin_lto_enable_optimizations = false
enable_rust = true
init_stack_vars_zero = false
chrome_pgo_phase = 0
