target_os = "mac"
target_cpu = "arm64"
v8_target_cpu = "arm64"
use_system_xcode = true
is_official_build = true
is_debug = false
thin_lto_enable_cache = false
enable_reporting = false
is_component_build = false
symbol_level = 0
optimize_webui = true
treat_warnings_as_errors = false
use_icf = true
v8_symbol_level = 0
v8_enable_fast_torque = true
v8_enable_builtins_optimization = true
blink_symbol_level = 0
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = false
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = true
enable_cdm_host_verification = false
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_hangout_services_extension = false
rtc_use_h264 = true
rtc_use_h265 = true
rtc_build_with_neon = true
rtc_build_examples = false
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
platform_has_optional_hevc_decode_support = true
platform_has_optional_hevc_encode_support = true
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_text_section_splitting = true
use_thin_lto = true
thin_lto_enable_optimizations = true
enable_rust = true
enable_updater = false
enable_update_notifications = false
chrome_pgo_phase = 2
# pgo_data_path = "/Users/midzer/chromium/src/out/thorium/profile/speedometer3.profdata"
# chrome-mac-arm-7871-1782251783-42ea1f90e1c578b011b558a4f21eaadd0e6204d9-1ddcb220ca6fd7fd5dc7593547188c00e30166f8.profdata
